--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ body {
 
 .hero__bg__image__container {
     width: 100%;
-    height: 75vh;
+    height: 80vh;
 }
 
 .hero__bg__image {
@@ -48,15 +48,30 @@ body {
     object-fit: cover;
 }
 
+.hero__subtitle, .hero__discription {
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+.hero__discription {
+    margin: 0 40px;
+}
+
 .hero__bg__overlay {
     position: absolute;
     background: rgba(0, 0, 0, 0.616);
     inset: 0;
     width: 100%;
-    height: 75vh;
+    height: 80vh;
     top: 0;
-    left: 0;
-    
+    left: 0;  
+    background-image: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.8),
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 0.3)
+    );
+      
 } 
 
 .languages__drop__down {
@@ -69,7 +84,7 @@ body {
 .dropdown__container {
     background: rgba(0, 0, 0, 0.4);
     border: 1px solid white;
-    padding: .4rem;
+    padding: .3rem;
     border-radius: .1rem;
 }
 
@@ -85,25 +100,90 @@ body {
 
 .hero__card {
     position: absolute;
-    top: 30%;
+    top: 20%;
     text-align: center;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
+.email__form__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;   
+    gap: 15px;
+}
+
+.email__input {
+    border: none;
+    background: transparent;
+    width: 100%;
+    height: 100%;
+    padding-left: 6px;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.form__container {
+    background-color: white;
+    width: 90%;
+    height: 50px;
+    position: relative;
+}
+
+.email__label {
+    color: black;
+    position: absolute;
+    font-family: poppins;
+    top: 25%;
+    left: 2%;
+    color: rgb(153, 149, 149);
+    transition: 0.4s;
+}
+
+.email__input:focus + .email__label{
+    top: 0.2rem;
+    font-size: 10px;
+}
+
+.email__input:not(:placeholder-shown).email__input:not(:focus) + .email__label {
+    top: 0.2rem;
+    font-size: 10px;
+}
+
+.email__input:focus-visible {
+    outline: none;
+}
+
+.primary__button {
+    background: #dc030f;
+    border: 1px solid #dc030f;
+    color: white;
+    padding: .8rem 1.2rem;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 1.2rem;
+    width: fit-content;
+    letter-spacing: 1px ;
+    
+}
 
 @media (min-width: 768px) {
     .hero__bg__image__container {
-        height: 100vh;
+        height: 70vh;
+    }
+
+    .navbar__brands {
+        width: 150px;
     }
 
     .hero__bg__overlay {
-        height: 100vh;
+        height: 70vh;
     }
     
     .hero__card {
-        top: 50%;
+        top: 30%;
         left: 30%;
         transform:translate(-20%, -20%) ;
     }
@@ -126,7 +206,10 @@ body {
     .navbar__brands {
         width: 200px;
     }
-
+    
+    .navbar__nav__items {
+        gap: 2.5rem;
+    }
     .signin__btn {
         padding: 10px 20px;
         font-size: 18px;
@@ -150,6 +233,16 @@ body {
         transform:translate(-50%, -50%) ;
     }
 
+    .form__container {
+        width: 70%;
+        height: 4rem;
+        margin-left: .5rem;
+    }
+
+    .primary__button {
+        border-radius: 0;
+        height: 4rem;
+    }
     .hero__title {
         font-weight: 900;
         font-size: 3.5rem;
@@ -160,6 +253,10 @@ body {
         font-size: 1.3rem;
     }
 
+    .email__form__container {
+        flex-direction: row;
+        gap: 0;
+    }
 }
 @media (min-width: 1254px) {
     
